--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+.holder{
+	width:100vw;
+	height:100vh;
+	
+}
+.item-1{
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	width:100px;
+	height:100px;
+	background-color:red;
+}
